# csharp_rust_ffi

Simple OpeniTools/: Simple OpeniTools.sln
Simple OpeniTools/Simple OpeniTools/: DeviceState.cs  IDeviceAFC.cs  IDeviceFFI.cs  IDeviceProvider.cs  MainForm.Designer.cs  MainForm.cs  MainForm.en-US.resx  MainForm.resx  Program.cs  Simple OpeniTools.csproj  Utils.cs
idevice_lib/: .Cargo.toml.un~  Cargo.toml
idevice_lib/src/: idevice_fs.rs  idevice_helper.rs  idevice_utils.rs  lib.rs  main.rs
