[package]
name = "idevice_lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]


[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
bytes = "1.11.0"
chrono = "0.4.42"
idevice = { version = "0.1.50", features = ["full"] }
plist = "1.8.0"
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
